[package]
name = "aptos-hong-bao-backend"
version = "0.1.0"
authors = ["Tin Rabzelj <tin@flinect.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.66"
aptos-logger = { git = "https://github.com/aptos-labs/aptos-core", branch = "testnet" }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "testnet" }
chrono = { version = "0.4.22", features = ["serde"] }
clap = "3"
futures = "0.3.23"
graphql_client = "0.11.0"
hex = "0.4.3"
lazy_static = "1.4.0"
regex = "1.6.0"
reqwest = "0.11.13"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
thiserror = "1.0.37"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
warp = "0.3.2"
