[package]
name = "rusty-chat"
version = "0.1.0"
authors = ["Tin Rabzelj <tin@flinect.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
log = "0.4.17"
env_logger = "0.9.0"
chrono = { version = "0.4.22", features = ["serde"] }
regex = "1.6.0"
lazy_static = "1.4.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
futures = "0.3.23"
tokio = { version = "1.20.1", features = ["full"] }
warp = "0.3.2"
tokio-stream = { version = "0.1.9", features = ["sync"] }
